[package]
name = "rustpython-pylib"
version = "0.3.1"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs", "Lib/", "!Lib/**/test/", "!Lib/**/*.pyc"]

[features]
freeze-stdlib = []

[dependencies]
rustpython-compiler-core = { workspace = true }
rustpython-derive = { version = "0.3.1", path = "../derive" }

[build-dependencies]
glob = { workspace = true }
