[package]
name = "rustpython-compiler-core"
version = "0.3.1"
edition = "2021"

[dependencies]
rustpython-parser-core = { workspace = true, features=["location"] }

bitflags = { workspace = true }
itertools = { workspace = true }
malachite-bigint = { workspace = true }
num-complex = { workspace = true }
serde = { version = "1.0.133", optional = true, default-features = false, features = ["derive"] }

lz4_flex = "0.9.2"
